<resources>
    <string name="app_name">Picallti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profil">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="reload">Reload</string>
    <string name="titre">Login</string>
    <string name="image_holder">ImageHolder</string>
    <string name="user_placeholder">Email address</string>
    <string name="pass_placeholder">Password</string>
    <string name="currentpass_placeholder">Current password</string>
    <string name="newpass_placeholder">New password</string>
    <string name="confirmnewpass_placeholder">Confirm new password</string>
    <string name="btnchangepass">Change your password</string>
    <string name="rememberme">Remember me</string>
    <string name="connect">Login</string>
    <string name="forgotpass">Forgot your password ?</string>
    <string name="register">Register here</string>
    <string name="connectsocial">Or connect with</string>
    <string name="forgotpasstitle">Forgot your password ?</string>
    <string name="forgotpasstitle2">Change your password</string>
    <string name="forgotpasstext">Please enter your email address to receive the password reset link.</string>
    <string name="forgotpassmail">Email address</string>
    <string name="forgotpasslientext">Receive a link</string>
    <string name="forgotpassback">Go back to login page</string>
    <string name="signUp">Sign Up</string>
    <string name="nom">Surname</string>
    <string name="prenom">Name</string>
    <string name="email">Email</string>
    <string name="emailConfirm">Confirm your email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="city">City</string>
    <string name="politiqueDeConfidentialité">I accept the terms and conditions of Picallti.</string>
    <string name="buttonCreerCompte">CREATE ACCOUNT</string>
    <string name="settings">Settings</string>
    <string name="accountSettings">Account</string>
    <string name="notificationSettings">Notifications</string>
    <string name="darkMode">Dark Mode</string>
    <string name="languageSetting">Language</string>
    <string name="security">Privacy &amp; Security</string>
    <string name="help">Help and Support</string>
    <string name="about">About</string>
    <string name="logOut">Log Out</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="deleteAccountMessage">The deletion of your account is permanent.</string>
    <string name="deleteAccountMessage2">It will delete all the data saved.</string>
    <string name="deleteAccountMessage3">Are you sure you want to continue ?</string>
    <string name="deleteAccountButton">DELETE MY ACCOUNT</string>
    <string name="textView" translatable="false">\t\t\tYou want to go for a ride\n\t\t\t\tbut have no bike?\n\t\tPicollti came with the solution\n\trent a bike or a scooter with one click</string>
    <string name="button">LOG IN</string>
    <string name="textView2" translatable="false">PICALLTI.2022</string>
    <string name="ContactTitle" translatable="false">Contact us</string>
    <string name="ContactSend" translatable="false">Send Message</string>
    <string name="LikesTitle" translatable="false">My favourites</string>
    <string name="title_activity_likes" translatable="false">LikesActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Picallti</string>
    <string name="nav_header_subtitle" translatable="false">Application de location de vélos &amp; scooters</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_transform" translatable="false">Transform</string>
    <string name="menu_reflow" translatable="false">Reflow</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_settings" translatable="false">Settings</string>
    <string name="Price" translatable="false">Price</string>
    <string name="LikedPst" translatable="false">Liked post title</string>
    <string name="lorem_ipsum_title" translatable="false">Lorem Ipsum"</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description" translatable="false">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description" translatable="false">Represents an image view in the
        item
    </string>
    <string name="bioTemplate" translatable="false">This is a bio template don\'t mind me</string>
    <string name="usernameTemplate">Username</string>
    <string name="offersTextView">Offers</string>
    <string name="notificationsTextView">Notifications</string>
    <string name="settingsTextView">Settings</string>
    <string name="phoneNumberTemplate" translatable="false">06-64-40-16-84</string>
    <string name="emailTemplate" translatable="false">meydi.safi@gmail.com</string>
    <string name="editProfileBtnText">Edit Profile</string>
    <string name="changePDPTextView">Change profile picture</string>
    <string name="usernameHint">Change your username</string>
    <string name="emailHint">Change your email</string>
    <string name="phoneHint">Change your phone number</string>
    <string name="bioHint">Change your bio</string>
    <string name="hidePhoneTextView">Hide my phone number</string>
    <string name="hideEmailTextView">Hide my email address</string>
    <string name="saveEditText">Save edit</string>
    <string name="hiUsernameText">Hi Username</string>
    <string name="welcomeBackText">Welcome Back!</string>
    <string name="hiUsername">Hi username</string>
    <string name="categoryText">Category</string>
    <string name="MostViewedText">Most Viewed</string>
    <string name="seeAllText">See All</string>
    <string name="NightMode">Night Mode</string>
    <string name="PrivateAccount">Private Account</string>
    <string name="SecurityPrivacy">Security and Privacy</string>
    <string name="Languages">Languages</string>
    <string name="Textsize">Text size</string>
    <string name="Sendusamessage">Send us a message</string>
    <string name="Aboutus">About us</string>
    <string name="phoneTxt">Phone</string>
    <string name="City">City</string>
    <string name="OfferTitle">Offer Title</string>
    <string name="deleteTxt">La suppression de votre compte est permanente et enrtrainera la suppression de toutes vos données enregitrées. Êtes-vous sûr de bien vouloir continuer ?</string>
    <string name="titreAjouterOffre">Ajouter Annonce</string>
    <string name="ajouterPhotoOffre">Ajouter une photo</string>
    <string name="titreOffreHint">Titre Offre</string>
    <string name="marqueOffreHint">Marque</string>
    <string name="descriptionOffreHint">Description Offre</string>
    <string name="prixOffreHint">Prix</string>
    <string name="boutonAjouterOffre">Ajouter offre</string>
    <string name="titlepass2" translatable="false">title pass 1</string>
    <string name="titlepass" translatable="false">title passs</string>
    <string name="resetpasstitle">reset pass</string>
    <string name="resetpasstitle2">Redéfinire le mot de passe:</string>
    <string name="titleTooLongMessage">"Le Titre ne doit pas dépasser 100 caractére"</string>
    <string name="noTitleMessage">You must put a title</string>
    <string name="noPriceMessage">You must put a price</string>
    <string name="falsePriceMessage">You must put a correct price</string>
    <string name="Yourmessage">Your message</string>
    <string name="Subject">Subject</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="MyOffers">My offers</string>
    <string name="searchfor">Search for...</string>
    <string name="Category">Category</string>
    <string name="SendCode">Send code</string>
    <string name="Entercode">Enter the code that you received</string>
    <string name="AddOffer">Add offer</string>
    <string name="Titredeloffre">Title of the offer</string>
    <string name="VehicleType">Vehicule type</string>
    <string name="Change">Change</string>
    <string name="Comments">Comments</string>
    <string name="add_your_comment">"add your comment"</string>
    <string name="settings_night_mode">Night Mode</string>
    <string name="settings_private_account">Private Account</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_security_privacy">Security and Privacy</string>
    <string name="settings_languages">Languages</string>
    <string name="settings_send_us_message">Send us a message</string>
    <string name="settings_about_us">About us</string>
    <string name="settings_FAQs">FAQ\'s</string>
    <string name="menu_mon_profil">Mon profil</string>
    <string name="menu_apparence">Apparence</string>
    <string name="menu_language">Langues</string>
    <string name="menu_apropos">A propos</string>
    <string name="menu_parametre">Paramètres</string>
    <string name="menu_likes">Mes favories</string>
    <string name="menu_logout">Se déconnecter</string>
    <string name="sidebar_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="sidebar_drawer_close">Fermer le tiroir de navigation</string>
    <string name="position">Co-fondateur</string>
    <string name="team_name">The warriors team</string>
    <string name="team_description">Description</string>
    <string name="ouissal">Ouissal Elkorri</string>
    <string name="ilham">Ilham Oukassou</string>
    <string name="ayoub">Ayoub Fadili</string>
    <string name="mehdi">Mehdi Safi</string>
    <string name="nisrine">Nisrine Moufakir</string>
    <string name="ibtissam">Ibtissam Zerouali</string>
    <string name="meryem">Meryem Bensaid</string>
    <string name="mohammed">Mohammed Echtouki</string>
    <string name="languages_choice_title">Choose the application\'s language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="languages_choice">(we have only three languages till now, we will add others in the nearest future)</string>
    <string name="privacy_title">Picallti Privacy &amp; Policy</string>
</resources>