<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profil">

    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.sidebar.ui.profil.ProfilFragment"
        android:label="@string/menu_mon_profil"
        tools:layout="@layout/fragment_profil" />

    <fragment
        android:id="@+id/nav_likes"
        android:name="com.example.sidebar.ui.likes.LikesFragment"
        android:label="@string/menu_likes"
        tools:layout="@layout/fragment_likes" />

    <fragment
        android:id="@+id/nav_apparence"
        android:name="com.example.sidebar.ui.apparence.ApparenceFragment"
        android:label="@string/menu_apparence"
        tools:layout="@layout/fragment_apparence" />

    <fragment
        android:id="@+id/nav_apropos"
        android:name="com.example.sidebar.ui.apropos.AproposFragment"
        android:label="@string/menu_apropos"
        tools:layout="@layout/fragment_apropos" />
</navigation>