<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page"
    android:background="#f8f9fa"

    >


    <TextView
        android:id="@+id/loginTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/titre"
        android:textSize="35sp"
        android:textColor="#131349"
        android:fontFamily="@font/fontnew2"
        />
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/image_holder"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitre"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo2"
        android:adjustViewBounds="true"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_holder"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/user_placeholder"
        android:textSize="20sp"
        android:paddingBottom="17dp"
        android:drawableStart="@drawable/userlogo"
        android:inputType="text"
        android:fontFamily="@font/fontnew2"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/pass_placeholder"
        android:textSize="20sp"
        android:paddingBottom="17dp"
        android:drawableStart="@drawable/mdpico"
        android:inputType="textPassword"
        android:fontFamily="@font/fontnew2"
        android:drawablePadding="10dp"
        />
    <TextView
        android:id="@+id/rememberme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/rememberme"
        android:fontFamily="@font/fontnew2"
        android:layout_alignStart="@id/password"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:textColor="#131349"
        />

    <CheckBox

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignEnd="@id/rememberme"
        android:layout_marginEnd="-40dp"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rememberme"
        android:text="@string/connect"
        android:textColor="@color/textappcolor"
        android:width="300dp"
        android:layout_marginTop="25dp"
        android:padding="13sp"
        android:fontFamily="@font/fontnew2bold"
        android:clickable="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpass"
        android:layout_below="@+id/btnConnect"
        android:layout_alignStart="@+id/btnConnect"
        android:layout_marginTop="15dp"
        android:textColor="#131349"
        android:fontFamily="@font/fontnew2"/>
    <TextView
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/btnConnect"
        android:layout_alignEnd="@id/btnConnect"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/fontnew2"
        android:textColor="#131349"/>
    <TextView
        android:id="@+id/connectwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectsocial"
        android:layout_below="@id/inscription"
        android:layout_marginTop="65dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:fontFamily="@font/fontnew2"
        android:textColor="#131349"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectwith"
        android:layout_alignStart="@id/connectwith"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_holder"
        android:src="@drawable/fblogo"
        tools:ignore="ImageContrastCheck" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectwith"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/googlelogo"
        android:contentDescription="@string/image_holder"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectwith"
        android:layout_alignEnd="@id/connectwith"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_holder"
        android:src="@drawable/logotwitter"
        tools:ignore="ImageContrastCheck" />



</RelativeLayout>