<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    tools:context=".SingUp"
    android:fillViewport="true"
    android:layout_width="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--ImageView
        android:id="@+id/logo"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        /-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:text="@string/signUp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pageTitle"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/nom" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="Ghoslin"
        android:drawableLeft="@drawable/nom"
        android:inputType="text"
        android:padding="10dp" />
    <TextView
        android:id="@+id/prenomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/prenom" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prenomLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="Jamal"
        android:drawableLeft="@drawable/nom"
        android:inputType="text"
        android:padding="10dp" />
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prenom"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="jamal@mail.com"
        android:drawableLeft="@drawable/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />
    <TextView
        android:id="@+id/emailVerifLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/emailConfirm" />

    <EditText
        android:id="@+id/emailVerif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailVerifLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="jamal@mail.com"
        android:drawableLeft="@drawable/valid_mail"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailVerif"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/phone" />


    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumberLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="0660606060"
        android:drawableLeft="@drawable/phone"
        android:inputType="phone"
        android:padding="10dp" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/password" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/open_lock"
        android:inputType="textPassword"
        android:padding="10dp"/>


    <TextView
        android:id="@+id/passwordVerifLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/passwordConfirm" />


    <EditText
        android:id="@+id/passwordVerif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordVerifLabel"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="10dp"
        android:hint="@string/passwordConfirm"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/villeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordVerif"
        android:layout_marginTop="2dp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:text="@string/city"/>

    <Spinner
        android:id="@+id/cities_spinner"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_below="@+id/villeLabel"
        android:layout_marginStart="20dp" />
    <CheckBox
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/politiqueDeConfidentialité"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/cities_spinner" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditions"
        android:backgroundTint="@color/blue"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/buttonCreerCompte"/>

</RelativeLayout>
</ScrollView>